<resources>
    <string name="app_name">Popular Movies</string>

    //fragmant xml strings
    <string name="offline">Slow Connection or no Internet Connection.</string>

    //moviesDetails xml strings
    <string name="original_title">Original Title :</string>
    <string name="users_rating">Users Rating :</string>
    <string name="release_date">Release Date :</string>
    <string name="plot_synapsis">Plot Synapsis :</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>
</resources>
