<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/favs"
    android:background="@color/background"
    android:layout_marginBottom="10dp">
<TextView
    android:id="@+id/movie_title_"
    android:text="@string/original_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/detail_text"
    android:textSize="16dp"
    android:padding="5dp"/>

    <TextView
        android:id="@+id/movie_title"
        android:text="@string/original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/movie_title_"
        android:textColor="@color/detail_text"
        android:textSize="16dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/release_d_"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_title_"
        android:textColor="@color/detail_text"
        android:textSize="16dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/release_d"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_title"
        android:layout_toRightOf="@+id/release_d_"
        android:textColor="@color/detail_text"
        android:textSize="16dp"
        android:padding="5dp"/>


    <TextView
        android:id="@+id/users_r_"
        android:text="@string/users_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/release_d_"
        android:textColor="@color/detail_text"
        android:textSize="16dp"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/users_r"
        android:text="@string/users_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/release_d"
        android:layout_toRightOf="@+id/users_r_"
        android:textColor="@color/detail_text"
        android:textSize="16dp"
        android:padding="5dp"
        />


</RelativeLayout>