<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
  >

    <LinearLayout
        android:id="@+id/detail_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
        />


        <ImageButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@android:drawable/btn_star" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            >
        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/detail_text"
            android:shadowColor="@color/detail_shadow"
           />

        <TextView
            android:id="@+id/original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/origin"


/>

        <TextView
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_rating"
            android:textStyle="bold"
            android:textColor="@color/detail_text"
            android:shadowColor="@color/detail_shadow"
            android:textSize="16dp"
            android:layout_below="@+id/origin"
/>

        <TextView
            android:id="@+id/users_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/users"
            android:layout_below="@+id/original"
 />



        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:textColor="@color/detail_text"
            android:shadowColor="@color/detail_shadow"
            android:textSize="16dp"
            android:layout_below="@+id/users"
  />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/release"
            android:layout_below="@+id/users_rating"
    />


            <TextView
                android:id="@+id/plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/detail_shadow"
                android:text="@string/plot_synapsis"
                android:textColor="@color/detail_text"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_below="@+id/release"/>

        <TextView
            android:id="@+id/plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:paddingBottom="32dp"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/plot"
            android:layout_below="@+id/release_date"
      />
        </RelativeLayout>
        <TextView
            android:id="@+id/trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/detail_shadow"
            android:text="@string/trailers"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/detail_shadow"
            android:text="@string/reviews"
            android:textColor="@color/detail_text"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>



    </LinearLayout>



</ScrollView>